# ChangeLog for net-libs/libpcap
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcap/ChangeLog,v 1.54 2006/03/19 22:59:39 jokey Exp $

  19 Mar 2006; Markus Ullmann <jokey@gentoo.org> libpcap-0.8.3-r1.ebuild,
  libpcap-0.9.3.ebuild, libpcap-0.9.4.ebuild:
  Respecting LDFLAGS when building libpcap.so now

  10 Mar 2006; Michael Hanselmann <hansmi@gentoo.org> libpcap-0.9.4.ebuild:
  Stable on ppc.

  07 Mar 2006; Chris White <chriswhite@gentoo.org> libpcap-0.9.4.ebuild:
  0.9.4 to amd64 stable.

  27 Feb 2006; Markus Rothe <corsair@gentoo.org> libpcap-0.9.4.ebuild:
  Stable on ppc64

  27 Feb 2006; Christian Birchinger <joker@gentoo.org> libpcap-0.9.4.ebuild:
  Added sparc stable keyword

  26 Feb 2006; Joshua Kinard <kumba@gentoo.org> libpcap-0.9.4.ebuild:
  Marked stable on mips.

  26 Feb 2006; Marcelo Goes <vanquirius@gentoo.org> libpcap-0.9.4.ebuild:
  Mark 0.9.4 x86 stable.

*libpcap-0.9.4 (08 Jan 2006)

  08 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> +libpcap-0.9.4.ebuild:
  0.9.4 version bump.

  24 Sep 2005; Markus Rothe <corsair@gentoo.org> libpcap-0.9.3.ebuild:
  Stable on ppc64

  17 Sep 2005; Aron Griffis <agriffis@gentoo.org> libpcap-0.9.3.ebuild:
  Mark 0.9.3 stable on ia64

  16 Sep 2005; <dang@gentoo.org> libpcap-0.9.3.ebuild:
  Marked stable on amd64

  15 Sep 2005; Aron Griffis <agriffis@gentoo.org> libpcap-0.9.3.ebuild:
  Mark 0.9.3 stable on alpha

  15 Sep 2005; Joseph Jezak <josejx@gentoo.org> libpcap-0.9.3.ebuild:
  Marked ppc stable.

  13 Sep 2005; Gustavo Zacarias <gustavoz@gentoo.org> libpcap-0.9.3.ebuild:
  Stable on sparc

  12 Sep 2005; Daniel Black <dragonheart@gentoo.org> libpcap-0.9.3.ebuild:
  x86 stable by popular request - bug #102505

  11 Sep 2005; Marcelo Goes <vanquirius@gentoo.org>
  +files/libpcap-0.9.3-whitespace.diff, libpcap-0.9.3.ebuild:
  Adding patch to remove whitespace in pcap.h to avoid non-portable whitespace