@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcap/Attic/libpcap-0.9.4.ebuild,v 1.11 2006/03/19 22:59:39 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcap/Attic/libpcap-0.9.4.ebuild,v 1.12 2006/04/01 15:04:43 flameeyes Exp $
 
 inherit eutils multilib toolchain-funcs
 
@@ -11,11 +11,10 @@ SRC_URI="http://www.tcpdump.org/release/${P}.tar.gz
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~alpha amd64 arm hppa ia64 m68k mips ppc ppc64 s390 sh sparc x86"
+KEYWORDS="~alpha amd64 arm hppa ia64 m68k mips ppc ppc64 s390 sh sparc x86 ~x86-fbsd"
 IUSE="ipv6"
 
-DEPEND="virtual/libc
-	!virtual/libpcap"
+DEPEND="!virtual/libpcap"
 
 PROVIDE="virtual/libpcap"
 
