@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libpcap
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcap/ChangeLog,v 1.54 2006/03/19 22:59:39 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcap/ChangeLog,v 1.55 2006/04/01 15:04:43 flameeyes Exp $
+
+  01 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> libpcap-0.9.4.ebuild:
+  Drop virtual/libc dependency and keyword ~x86-fbsd.
 
   19 Mar 2006; Markus Ullmann <jokey@gentoo.org> libpcap-0.8.3-r1.ebuild,
   libpcap-0.9.3.ebuild, libpcap-0.9.4.ebuild:
